force-app/main/default/objects/Investigation__c/Investigation__c.object-meta.xml
<CustomObject>
    <description>PacPoint-IC101718 - Created for BREG phase 1</description>
    <label>Investigation</label>
    <nameField>
        <label>Investigation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investigations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>