force-app/main/default/objects/Investigation__c/fields/AgeDaysFormula__c.field-meta.xml
<CustomField>
    <fullName>AgeDaysFormula__c</fullName>
    <description>PacPoint-MV050919 - Created for BREG phase 1</description>
    <formula>IF( 
OR( 
ISPICKVAL(Status__c, &quot;Recommend to Close&quot;), 
ISPICKVAL(Status__c, &quot;Recommend Referral to Legal&quot;) 
), 
DATEVALUE(ClosedDateTime__c) - DATEVALUE(CreatedDate), 
TODAY() - DATEVALUE(CreatedDate) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>