force-app/main/default/objects/Investigation__c/fields/AgeDaysOld__c.field-meta.xml
<CustomField>
    <fullName>AgeDaysOld__c</fullName>
    <description>PacPoint-CL0401019 - Created for BREG phase 1</description>
    <label>Age (Days)Old</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>