force-app/main/default/objects/Investigation__c/fields/BackgroundChecks__c.field-meta.xml
<CustomField>
    <fullName>BackgroundChecks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC101718 - Created for BREG phase 1</description>
    <label>Background Checks</label>
    <type>Checkbox</type>
</CustomField>