force-app/main/default/objects/Investigation__c/fields/Bank2Date__c.field-meta.xml
<CustomField>
    <fullName>Bank2Date__c</fullName>
    <description>PacPoint-IC101718 - Created for BREG phase 1</description>
    <label>Bank 2 Date</label>
    <type>Date</type>
</CustomField>