force-app/main/default/objects/Investigation__c/fields/Bank3__c.field-meta.xml
<CustomField>
    <fullName>Bank3__c</fullName>
    <description>PacPoint-IC101718 - Created for BREG phase 1</description>
    <label>Bank 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>