force-app/main/default/objects/Investigation__c/fields/BankRecordsAnalysis__c.field-meta.xml
<CustomField>
    <fullName>BankRecordsAnalysis__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-RA110218-BREG Phase 1</description>
    <inlineHelpText>Bank records analysis. (If applicable)</inlineHelpText>
    <label>Bank Records Analysis</label>
    <type>Checkbox</type>
</CustomField>