force-app/main/default/objects/Investigation__c/fields/BankRecordsSubpoena__c.field-meta.xml
<CustomField>
    <fullName>BankRecordsSubpoena__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC101718 - Created for BREG phase 1</description>
    <inlineHelpText>Subpoena bank records (within 2 weeks of receiving case file)</inlineHelpText>
    <label>Bank Records Subpoena?</label>
    <type>Checkbox</type>
</CustomField>