force-app/main/default/objects/Investigation__c/fields/ChecklistStatus__c.field-meta.xml
<CustomField>
    <fullName>ChecklistStatus__c</fullName>
    <description>PacPoint-JB102618 - Created for BREG phase 1: This field collects checklist actions into categories for the Path</description>
    <label>Checklist Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Background Check Complete</fullName>
            </value>
            <value>
                <fullName>Initial Interviews Complete</fullName>
            </value>
            <value>
                <fullName>Bank Records Subpoena Complete</fullName>
            </value>
            <value>
                <fullName>Bank Records Investigation Complete</fullName>
            </value>
            <value>
                <fullName>Additional Interviews Complete</fullName>
            </value>
            <value>
                <fullName>Investigation Review Complete</fullName>
            </value>
            <value>
                <fullName>Interviews Complete</fullName>
            </value>
            <value>
                <fullName>Violation Determination Complete</fullName>
            </value>
            <value>
                <fullName>Draft Settlement Complete</fullName>
            </value>
            <value>
                <fullName>Draft Actions Complete</fullName>
            </value>
            <value>
                <fullName>Hearing Preparation Complete</fullName>
            </value>
            <value>
                <fullName>Closing Actions Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>