force-app/main/default/objects/Investigation__c/fields/CloseCase__c.field-meta.xml
<CustomField>
    <fullName>CloseCase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC101718 - Created for BREG phase 1</description>
    <inlineHelpText>Closing correspondence
•SCB Referral Closing Memo
•Respondent(s) Closing Letter
•Complainant(s) Closing Letter
•U6
•FINRA Notification</inlineHelpText>
    <label>Close Case</label>
    <type>Checkbox</type>
</CustomField>