force-app/main/default/objects/Investigation__c/fields/ClosedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ClosedDateTime__c</fullName>
    <description>PacPoint-MV050919 - Created for BREG phase 1</description>
    <inlineHelpText>Field populated automatically when the status is set to &quot;&quot;Recommend to Close&quot; &amp;&amp; &quot;Recommend Referral to Legal&quot;</inlineHelpText>
    <label>Closed Date / Time</label>
    <type>DateTime</type>
</CustomField>