force-app/main/default/objects/Investigation__c/fields/Commissioner_Approver__c.field-meta.xml
<CustomField>
    <fullName>Commissioner_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-JB110218 - Created for BREG phase 1</description>
    <label>Commissioner Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Investigations</relationshipName>
    <type>Lookup</type>
</CustomField>