force-app/main/default/objects/Investigation__c/fields/ContactRespondentresettlement__c.field-meta.xml
<CustomField>
    <fullName>ContactRespondentresettlement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC101718 - Created for BREG phase 1</description>
    <inlineHelpText>Contact Respondent re settlement</inlineHelpText>
    <label>Contact Respondent re settlement</label>
    <type>Checkbox</type>
</CustomField>