force-app/main/default/objects/Investigation__c/fields/CursoryReviewofBankRecords__c.field-meta.xml
<CustomField>
    <fullName>CursoryReviewofBankRecords__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC101718 - Created for BREG phase 1</description>
    <inlineHelpText>Upon receipt of subpoenaed bank records, do cursory review to determine if additional bank records need to be obtained. Note that if a bank check and/or cashier&apos;s check in a big amount with no identifying payor&apos;s name are found, issue subpoena for payor.</inlineHelpText>
    <label>Cursory Review of Bank Records</label>
    <type>Checkbox</type>
</CustomField>