force-app/main/default/objects/Investigation__c/fields/DateofaddtlAttorneyMeeting__c.field-meta.xml
<CustomField>
    <fullName>DateofaddtlAttorneyMeeting__c</fullName>
    <description>PacPoint-IC101718 - Created for BREG phase 1</description>
    <inlineHelpText>Meet with assigned attorney when additional important information is obtained (this will help to limit the scope of the investigation). Add date of meeting here.</inlineHelpText>
    <label>Date of addtl Attorney Meeting</label>
    <type>Date</type>
</CustomField>