force-app/main/default/objects/Investigation__c/fields/DateofAttorneyMeeting__c.field-meta.xml
<CustomField>
    <fullName>DateofAttorneyMeeting__c</fullName>
    <description>PacPoint-IC101718 - Created for BREG phase 1</description>
    <inlineHelpText>Meet with assigned attorney (within 2 weeks of receiving case file). Add date of meeting here.</inlineHelpText>
    <label>Date of Attorney Meeting</label>
    <type>Date</type>
</CustomField>