force-app/main/default/objects/Investigation__c/fields/DateofComplainantInterview__c.field-meta.xml
<CustomField>
    <fullName>DateofComplainantInterview__c</fullName>
    <description>PacPoint-IC101718 - Created for BREG phase 1</description>
    <inlineHelpText>Interview complainant (with assigned attorney or another investigator within 2 weeks of receiving case file). Add date of interview here.</inlineHelpText>
    <label>Date of Complainant Interview</label>
    <type>Date</type>
</CustomField>