force-app/main/default/objects/Investigation__c/fields/DateofInvestigationReportReview__c.field-meta.xml
<CustomField>
    <fullName>DateofInvestigationReportReview__c</fullName>
    <description>PacPoint-RA110218-BREG Phase 1</description>
    <inlineHelpText>Review investigation report (within 2 weeks of receiving case file)</inlineHelpText>
    <label>Date of Investigation Report Review</label>
    <type>Date</type>
</CustomField>