force-app/main/default/objects/Investigation__c/fields/DateofInvestigatorMeeting__c.field-meta.xml
<CustomField>
    <fullName>DateofInvestigatorMeeting__c</fullName>
    <description>PacPoint-RA110218-BREG Phase 1</description>
    <inlineHelpText>Meet with assigned investigator (within 30 days of receiving case file)</inlineHelpText>
    <label>Date of Investigator Meeting</label>
    <type>Date</type>
</CustomField>