force-app/main/default/objects/Investigation__c/fields/DateofRespondentInterview__c.field-meta.xml
<CustomField>
    <fullName>DateofRespondentInterview__c</fullName>
    <description>PacPoint-IC101718 - Created for BREG phase 1</description>
    <inlineHelpText>Interview respondent (with assigned attorney or another investigator within 2 weeks of receiving case file). Add date of interview here.</inlineHelpText>
    <label>Date of Respondent Interview</label>
    <type>Date</type>
</CustomField>