force-app/main/default/objects/Investigation__c/fields/DateofWitnessInterviews__c.field-meta.xml
<CustomField>
    <fullName>DateofWitnessInterviews__c</fullName>
    <description>PacPointRA110218- BREG Phase 1</description>
    <inlineHelpText>Interview other witnesses with assigned attorney or another investigator. Add date of last interview here.</inlineHelpText>
    <label>Date of Witness Interviews</label>
    <type>Date</type>
</CustomField>