force-app/main/default/objects/Investigation__c/fields/DocSign_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>DocSign_Folder_Name__c</fullName>
    <formula>&quot;Investigation&quot; + &quot; - &quot; +  SEBCaseNumber__c + &quot; - &quot; +  RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DocSign Folder Name</label>
    <type>Text</type>
</CustomField>