force-app/main/default/objects/Investigation__c/fields/DraftActiontobeTaken__c.field-meta.xml
<CustomField>
    <fullName>DraftActiontobeTaken__c</fullName>
    <description>PacPoint-IC101718 - Created for BREG phase 1</description>
    <inlineHelpText>Petition; Cease &amp; Desist; Suspension; Injunction</inlineHelpText>
    <label>Draft Action to be Taken</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Petition</fullName>
            </value>
            <value>
                <fullName>Cease and Desist</fullName>
            </value>
            <value>
                <fullName>Suspension</fullName>
            </value>
            <value>
                <fullName>Injunction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>