force-app/main/default/objects/Investigation__c/fields/DraftSettlementDocumentApproved__c.field-meta.xml
<CustomField>
    <fullName>DraftSettlementDocumentApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC101718 - Created for BREG phase 1</description>
    <inlineHelpText>Consent Order; Consent Agreement, Warning Letter. Ensure Commissioner review/ approval.</inlineHelpText>
    <label>Draft Settlement Document Approved</label>
    <type>Checkbox</type>
</CustomField>