force-app/main/default/objects/Investigation__c/fields/FileCleanUp__c.field-meta.xml
<CustomField>
    <fullName>FileCleanUp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC101718 - Created for BREG phase 1</description>
    <inlineHelpText>File/Digital Folders
•Remove draft docs of pleadings/correspondence
•Remove attorney notes/work product
•Retain final drafts of pleadings – filed and PDF copies</inlineHelpText>
    <label>File Clean Up</label>
    <type>Checkbox</type>
</CustomField>