force-app/main/default/objects/Investigation__c/fields/InvestigationRecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>InvestigationRecordTypeName__c</fullName>
    <description>PacPoint AC 210304 - DCCA BREG SEC/SEB Support Year 2 - Creating to be used for the SpringCM folder naming conventions</description>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investigation Record Type Name</label>
    <type>Text</type>
</CustomField>