force-app/main/default/objects/Investigation__c/fields/Makedeterminationofactiontobetaken__c.field-meta.xml
<CustomField>
    <fullName>Makedeterminationofactiontobetaken__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC101718 - Created for BREG phase 1</description>
    <inlineHelpText>Make determination of action to be taken in consultation with investigator, Supervising Investigator and/or Supervising Attorney</inlineHelpText>
    <label>Make determination of action to be taken</label>
    <type>Checkbox</type>
</CustomField>