force-app/main/default/objects/Investigation__c/fields/PrepareforHearing__c.field-meta.xml
<CustomField>
    <fullName>PrepareforHearing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC101718 - Created for BREG phase 1</description>
    <inlineHelpText>Exhibits 
Testimony</inlineHelpText>
    <label>Prepare for Hearing</label>
    <type>Checkbox</type>
</CustomField>