force-app/main/default/objects/Investigation__c/fields/ReviewAllegedViolations__c.field-meta.xml
<CustomField>
    <fullName>ReviewAllegedViolations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC101718 - Created for BREG phase 1</description>
    <inlineHelpText>Review alleged violations and make determinations in consultation with investigator, Supervising Investigator and/or Supervising Attorney</inlineHelpText>
    <label>Review Alleged Violations</label>
    <type>Checkbox</type>
</CustomField>