force-app/main/default/objects/Investigation__c/fields/SEBCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>SEBCaseNumber__c</fullName>
    <description>PacPoint AC 210303 - DCCA BREG SEC/SEB Support Year 2 -  Creating this field to use for the CLM folder naming convention</description>
    <formula>IF( ISBLANK(SEBCase__r.SEBCaseNumber__c) ,SEBCaseName__c, SEBCase__r.SEBCaseNumber__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SEB Case Number</label>
    <type>Text</type>
</CustomField>