force-app/main/default/objects/Investigation__c/fields/SEBCaseOwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>SEBCaseOwnerEmail__c</fullName>
    <description>PacPoint-JB102518 - Created for BREG phase 1: Used in Flow</description>
    <formula>IF(LEFT(SEBCase__r.OwnerId,3)= &apos;00G&apos;,  SEBCase__r.Owner:Queue.QueueEmail,  SEBCase__r.Owner:User.Email )</formula>
    <label>SEBCaseOwnerEmail</label>
    <type>Text</type>
</CustomField>