force-app/main/default/objects/Investigation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>PacPoint-IC101818 - Created for BREG phase 1</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appellate Court</fullName>
            </value>
            <value>
                <fullName>Circuit Court</fullName>
            </value>
            <value>
                <fullName>Commissioner’s Final Order</fullName>
            </value>
            <value>
                <fullName>Consent Agreement</fullName>
            </value>
            <value>
                <fullName>Consent Order</fullName>
            </value>
            <value>
                <fullName>Corrections by Attorney Required (L)</fullName>
            </value>
            <value>
                <fullName>Corrections Required</fullName>
            </value>
            <value>
                <fullName>Currently in Hearing</fullName>
            </value>
            <value>
                <fullName>Ex Parte Motion for Service by Publication</fullName>
            </value>
            <value>
                <fullName>Investigation in Progress</fullName>
            </value>
            <value>
                <fullName>Judgement Enforcing Commissioner’s Final Order</fullName>
            </value>
            <value>
                <fullName>Judgement Enforcing Commissioner’s Final Order (BOC)</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Order Ready to Serve</fullName>
            </value>
            <value>
                <fullName>Pending Hearing Date</fullName>
            </value>
            <value>
                <fullName>Pending Request for Hearing</fullName>
            </value>
            <value>
                <fullName>Preliminary Order to Cease and Desist</fullName>
            </value>
            <value>
                <fullName>Ready for Supervising Attorney Review</fullName>
            </value>
            <value>
                <fullName>Ready for Supervising Attorney Review (L)</fullName>
            </value>
            <value>
                <fullName>Ready for Supervisor Review</fullName>
            </value>
            <value>
                <fullName>Recommend Final Order</fullName>
            </value>
            <value>
                <fullName>Recommend Judgement</fullName>
            </value>
            <value>
                <fullName>Recommend Referral to Legal</fullName>
            </value>
            <value>
                <fullName>Recommend to Close</fullName>
            </value>
            <value>
                <fullName>Remand to Appellate Court</fullName>
            </value>
            <value>
                <fullName>Remand to Circuit Court</fullName>
            </value>
            <value>
                <fullName>Remand to Commissioner</fullName>
            </value>
            <value>
                <fullName>Report Approved</fullName>
            </value>
            <value>
                <fullName>Supreme Court</fullName>
            </value>
            <value>
                <fullName>Under Legal Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>