force-app/main/default/objects/Investigation__c/fields/Supervising_Attorney_Approver__c.field-meta.xml
<CustomField>
    <fullName>Supervising_Attorney_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-JB110218 - Created for BREG phase 1</description>
    <label>Supervising Attorney Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Investigations1</relationshipName>
    <type>Lookup</type>
</CustomField>