force-app/main/default/objects/Investigation__c/fields/TotalExpenses__c.field-meta.xml
<CustomField>
    <fullName>TotalExpenses__c</fullName>
    <description>PacPoint-MV121318 - Created for BREG phase 1</description>
    <label>Total Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>