force-app/main/default/objects/Investigation__c/fields/TotalHours__c.field-meta.xml
<CustomField>
    <fullName>TotalHours__c</fullName>
    <description>PacPoint-MV121318 - Created for BREG phase 1</description>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>